--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Git</title>
+        <title>Git123123</title>
     </head>
 <body>
     <header>
